--- a/src/index.html
+++ b/src/index.html
@@ -430,6 +430,8 @@
 
                             </div>
 
+<!--                            КАЛЬКУЛЯТОР-->
+
                             <div class="col-8" style="padding-right: 0;">
                                 <div class="card">
                                     <div class="card-header bg-success text-white" style="padding: 23px 35px; font-size: 1.3rem;">
@@ -498,8 +500,104 @@
                                         </div>
                                     </div>
 
+                                    <div class="card-body mt-4">
+                                        <div class="form-group col-12">
+                                            <p>Период размещения</p>
+                                        </div>
+                                        <div class="form-group col-12 row">
+                                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 d-flex align-items-center">
+                                                <select class="form-select form-select-sm" aria-label=".form-select-sm example">
+                                                    <option selected>14 дней</option>
+                                                    <option value="1">One</option>
+                                                    <option value="2">Two</option>
+                                                    <option value="3">Three</option>
+                                                </select>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 ">
+                                                <div class="form-group d-flex flex-column">
+                                                    <p class="d-flex flex-row justify-content-between">
+                                                        <span class="text-secondary">
+                                                            Цена:
+                                                        </span>
+                                                        <span>
+                                                            520 р.
+                                                        </span>
+                                                    </p>
+                                                    <p class="d-flex flex-row justify-content-between">
+                                                        <span class="text-secondary">
+                                                            Со скидкой:
+                                                        </span>
+                                                        <span class="text-success">
+                                                            490 р.
+                                                        </span>
+                                                    </p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
+
                             </div>
+
+<!--                            АКЦИИ НОЯБРЯ-->
+
+                            <div class="col-8" style="padding-right: 0;">
+                                <div class="card">
+                                    <div class="card-header text-white" style="padding: 23px 35px; font-size: 1.3rem; background:#683c7f;">
+                                        <span class="text-secondary">Тариф</span>
+                                        <h4>Акция ноября</h4>
+                                    </div>
+
+                                    <div class="card-body row">
+
+                                            <div class="col-6">
+                                                <ul class="list-group">
+                                                    <li class="list-group-item" aria-current="true">52 сайта <span class="text-success" style="font-size: .8rem;">список</span></li>
+                                                    <li class="list-group-item">Superjob.ru</li>
+                                                </ul>
+                                            </div>
+                                            <div class="col-6">
+                                                <ul class="list-group">
+                                                    <li class="list-group-item" aria-current="true">Hh.ru</li>
+                                                    <li class="list-group-item">Jobmens.ru</li>
+                                                </ul>
+                                            </div>
+
+                                    </div>
+
+                                    <div class="card-body">
+                                        <div class="">
+                                            Период размещения: <span>14 дней</span>
+                                        </div>
+
+                                        <div class="">
+                                            Стоимость размещения: <span>3300 руб.</span>
+                                        </div>
+                                    </div>
+
+                                    <div class="card-body bg-light">
+                                        <div class="d-flex flex-column">
+                                            <b>Подарок!</b>
+                                            <br>
+                                            <b>Баннер на сайте</b>
+                                        </div>
+
+                                        <div class="d-flex flex-column">
+                                            <p>
+                                                Рекламируем вашу вакансию в течение всего периода размещения.
+                                            </p>
+                                        </div>
+
+                                        <div class="card-footer d-flex align-items-center">
+                                            <button type="button" class="btn btn-success text-white">Выбрать и продолжить</button>
+                                        </div>
+
+                                    </div>
+
+                                </div>
+
+                            </div>
+
                         </div>
                     </div>
 
