--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700;900&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Raleway:wght@400;500;700;900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -30,23 +36,23 @@
 
     <div class="container d-flex justify-content-center">
 
-        <div class="col-12 col-xs-12 col-sm-12 col-md-8 col-lg-7 col-xl-7">
-            <h2 class="text-center mb-4">Размещение вакансии</h2>
+        <div class="col-12 col-xs-12 col-sm-12 col-md-8 col-lg-7 col-xl-7" style="filter: drop-shadow(0.469px 2.963px 3.5px #b9b9b9);">
+            <h2 class="text-center" style="margin-top: 55px; margin-bottom: 35px; font-family: 'Raleway', sans-serif;">Размещение вакансии</h2>
 
-            <ul class="nav nav-tabs nav-fill mb-4 col-12" id="myTab" role="tablist">
-                <li class="nav-item col-12 col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-4" role="presentation">
+            <ul class="nav nav-tabs nav-fill col-12" id="myTab" role="tablist" style="margin-bottom: 35px; font-family: 'Lato', sans-serif;">
+                <li class="nav-item col-12 col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-4 tab-item" role="presentation">
                     <a class="nav-link step step-active" id="home-tab" data-bs-toggle="tab" href="#info" role="tab"
                        aria-controls="info" aria-selected="true">1. Информация о вакансии</a>
                 </li>
-                <li class="nav-item col-12 col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-3" role="presentation">
+                <li class="nav-item col-12 col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-3 tab-item" role="presentation">
                     <a class="nav-link step" id="register-tab" data-bs-toggle="tab" href="#register" role="tab"
                        aria-controls="register" aria-selected="false">2. Регистрация</a>
                 </li>
-                <li class="nav-item col-12 col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-2" role="presentation">
+                <li class="nav-item col-12 col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-2 tab-item" role="presentation">
                     <a class="nav-link step" id="fees-tab" data-bs-toggle="tab" href="#fees" role="tab"
                        aria-controls="fees" aria-selected="false">3. Тарифы</a>
                 </li>
-                <li class="nav-item col-12 col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-3" role="presentation">
+                <li class="nav-item col-12 col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-3 tab-item" role="presentation">
                     <a class="nav-item nav-link step" id="payment-tab" data-bs-toggle="tab" href="#payment" role="tab"
                        aria-controls="payment" aria-selected="false">4. Способ оплаты</a>
                 </li>
@@ -64,7 +70,7 @@
 
                             <div class="row">
                                 <div class="d-flex row">
-                                    <p>Введите основную информацию, по этим параметрам будущий сотрудник сможет
+                                    <p style=" max-width: 575px; font-size: 0.9rem; line-height: 20px; color: #787f84; font-weight: 400; font-family: 'Lato', sans-serif;">Введите основную информацию, по этим параметрам будущий сотрудник сможет
                                         быстро отыскать ваше объявление.</p>
                                 </div>
                             </div>
