--- a/src/index.html
+++ b/src/index.html
@@ -198,7 +198,7 @@
 
                             <div class="row">
                                 <div class="form-group d-flex justify-content-center">
-                                    <button class="next-step" id="firstStep">Следующий шаг. Регистрация</input>
+                                    <a class="next-step" id="firstStep">Следующий шаг. Регистрация</a>
                                 </div>
                             </div>
 
@@ -320,14 +320,14 @@
                         </div>
 
                         <div class="row">
-                            <div class="form-group col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6" >
+                            <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-6" >
                                 <label for="input-company" class="reg__label">Название компании <span
                                         class="text-danger">*</span></label>
                                 <input type="text" class="form-control" id="input-company" placeholder="ООО Пекарня">
                             </div>
 
-                            <div class="form-group col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 input-file-wrap" style="margin: 40px 0px 30px 10px;">
-                                <input type="file" class="form-control" id="input-logo" placeholder="Загрузить логотип">
+                            <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 input-file-wrap ml-0">
+                                <input type="file" class="form-control" id="input-logo" placeholder="Загрузить логотип" style="padding: 0;">
                                 <label for="input-logo" class="reg__label input-file-button">
                                     <span class="input-file-sym" style="font-weight: 900; font-size: 1.2rem;">+</span>
                                     <span style="margin-left: 15px; line-height: 19px; color: #6a6a6a; font-weight: 400; font-size: 1.1rem;">Загрузить логотип</span>
@@ -879,7 +879,7 @@
 
 
                     </div>
-
+                </div>
             </form>
 
         </div>
